crates/plotnik-vm/src/engine/snapshots/plotnik_lib__engine__engine_tests__suppressive_capture_named.snap
---
source: crates/plotnik-lib/src/engine/engine_tests.rs
---
Q = (program (lexical_declaration (variable_declarator name: (identifier) @_name value: (number) @value)))
---
let x = 42
---
{
  "value": {
    "kind": "number",
    "text": "42",
    "span": [
      8,
      10
    ]
  }
}
