crates/plotnik-vm/src/engine/snapshots/plotnik_lib__engine__engine_tests__suppressive_capture_suppresses_inner.snap
---
source: crates/plotnik-lib/src/engine/engine_tests.rs
---
Expr = (binary_expression left: (number) @left right: (number) @right)
Q = (program (expression_statement (Expr) @_))
---
1 + 2
---
null
