crates/plotnik-vm/src/engine/snapshots/plotnik_lib__engine__engine_tests__wildcard_bare_matches_anonymous.snap
---
source: crates/plotnik-lib/src/engine/engine_tests.rs
---
Q = (program (return_statement _ @x))
---
return 42
---
{
  "x": {
    "kind": "return",
    "text": "return",
    "span": [
      0,
      6
    ]
  }
}
