crates/plotnik-vm/src/engine/snapshots/plotnik_lib__engine__engine_tests__wildcard_named_skips_anonymous.snap
---
source: crates/plotnik-lib/src/engine/engine_tests.rs
---
Q = (program (return_statement (_) @x))
---
return 42
---
{
  "x": {
    "kind": "number",
    "text": "42",
    "span": [
      7,
      9
    ]
  }
}
